# opensearch-knn-demo

./: README.md  docker-compose.yml  pyproject.toml
knnsearch/: model.py  repo.py  vec.py
tests/: test_repo.py  test_vec.py
