[project]
name = ""
version = ""
description = ""
authors = [
    {name = "TATA", email = "evadcmd@gmail.com"},
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.34.1",
    "fastapi>=0.104.0",
    "opensearch-py[async]>=2.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
]

[tool.pdm.scripts]
test.cmd = "pytest -s"
